# vikunja-webdav-export

./: .gitignore  README.md  nextcloud_upload.py  pyproject.toml  sample.env  vikunja_dump.py
vikunja_export/: config.py  export.py  main.py  vikunja.py  webdav.py
